fixed costing issue where padding was set incorrectly (due to vagueness in the assignment requirements) cost estimate now aligns with specified values

--- a/style.css
+++ b/style.css
@@ -12,3 +12,7 @@
 	height: 100%;
 	width: 100%;
 }
+
+.outputs {
+    float: left;
+}
